# envauto

./: .env.example  .gitignore  Dockerfile  Dockerfile.login  README.md  docker-compose.login.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  base.py  graphics.py  image.py  music.py  sound.py  video.py
app/core/: auth.py  browser.py  queue.py  session_keeper.py  storage.py
app/models/: schemas.py
app/routes/: admin.py  generate.py  jobs.py  security.py
automation/: README.md  n8n-webhook-envato.json
docs/: DEPLOY.md  LIMITES_OPERATIVOS.md  SELECTORS.md  STATUS.md  TROUBLESHOOTING.md
scripts/: git_init_and_push.sh  login.py  login_vnc_auto.py  refresh_session.sh  vnc_login_entrypoint.sh
